gpu: Keep original GMB alive to workaround problem with importing of UDL/EVDI buffers.

Destroying the original buffer invalidates kernel state such that
importing from the FD doesn't work as expected. By keeping the
original buffer alive we avoid this issue for scanout buffers used
by the browser process.

BUG=628334
CQ_INCLUDE_TRYBOTS=master.tryserver.chromium.linux:linux_optional_gpu_tests_rel;master.tryserver.chromium.mac:mac_optional_gpu_tests_rel;master.tryserver.chromium.win:win_optional_gpu_tests_rel

Review-Url: https://codereview.chromium.org/2171713004
Cr-Commit-Position: refs/heads/master@{#406973}

Former-commit-id: 1ff18bae4738ee3d62c2310d9e03211054be0582